[package]
name = "senzu"
version = "0.1.0"
edition = "2018"
authors = ["KaiWitt <kaiwitt@protonmail.com>"]
description = "Vanity address generator searching addresses derived from your xpub."
readme = "README.md"
repository = "https://github.com/KaiWitt/senzu"
license = "MIT"
keywords = ["bitcoin", "address", "cli", "vanity", "xpub"]
categories = ["cryptography::cryptocurrencies", "command-line-utilities"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.27.0"
clap = "2.33.3"
indicatif = "0.16.2"
rayon = "1.5.1"
xyzpub = "0.2.1"

